--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^5.3.0-alpha1",
     "react": "^18.2.0",
+    "react-contentful": "^2.0.31",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.2",
     "react-scripts": "5.0.1",
