--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^5.3.0-alpha1",
+    "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-contentful": "^2.0.31",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.2",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.8.2",
+    "react-scripts": "^2.1.3",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
