--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
     "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "sass": "^1.59.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
