--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,11 @@
     "classnames": "^2.3.2",
     "nodemon": "^2.0.21",
     "react": "^18.2.0",
+
+    "react-contentful": "^2.0.31",
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@contentful/app-sdk": "^3.33.0",
+    
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "sass": "^1.59.2"
