--- a/web/package.json
+++ b/web/package.json
@@ -10,18 +10,16 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "contentful": "^9.3.4",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.21",
     "react": "^18.2.0",
-
-    "react-contentful": "^2.0.31",
-    "@contentful/rich-text-react-renderer": "^15.12.1",
-    "@contentful/app-sdk": "^3.33.0",
-    
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "sass": "^1.59.2"
   },
   "devDependencies": {
+    "@types/node": "^18.15.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
