--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha1",
     "classnames": "^2.3.2",
     "contentful": "^9.3.4",
     "dotenv": "^16.0.3",
