--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "classnames": "^2.3.2",
     "contentful": "^9.3.4",
     "dotenv": "^16.0.3",
+    "framer-motion": "^10.12.17",
     "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2",
     "sass": "^1.59.2"
   },
