Add homepage link to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "web",
+  "homepage": "https://kaseyvee.github.io/D11/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
