--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.8.2",
     "sass": "^1.59.2"
   },
